refactor: get() -> getFirst()